--- a/index.html
+++ b/index.html
@@ -3,19 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <title>Central de Atendimento – Oasis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="dark">
 
-<div class="verify-box">
-  <h2>Verificação de Acesso</h2>
+  <div class="verify-box">
+    <h2>Verificação de Acesso</h2>
+    <p>Informe seu nome na cidade e seu ID para continuar</p>
 
-  <input id="nome" placeholder="Nome na cidade">
-  <input id="cid" placeholder="ID do cidadão">
+    <input 
+      type="text" 
+      id="nome" 
+      placeholder="Nome na cidade"
+      autocomplete="off"
+    >
 
-  <button onclick="verificar()">Verificar</button>
-</div>
+    <input 
+      type="text" 
+      id="cid" 
+      placeholder="ID do cidadão"
+      autocomplete="off"
+    >
 
-<script type="module" src="script.js"></script>
+    <button onclick="verificar()">Verificar</button>
+  </div>
+
+  <!-- Firebase / Script -->
+  <script type="module" src="script.js"></script>
+
 </body>
 </html>
