--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Verificação – Sistema Oasis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Sistema Oasis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body class="dark center">
 
-  <div class="card">
-    <h2>🔐 Verificação</h2>
+<div class="card">
+  <h2>🎫 Sistema de Tickets</h2>
+  <input id="nome" placeholder="Nome na cidade">
+  <input id="cid" placeholder="ID">
+  <button id="btnVerificar">Verificar</button>
+</div>
 
-    <input type="text" id="nome" placeholder="Nome na cidade" />
-    <input type="text" id="cid" placeholder="ID" />
-
-    <button id="btnVerificar">Verificar</button>
-  </div>
-
-  <!-- JS EXTERNO (OBRIGATÓRIO NO GITHUB PAGES) -->
-  <script type="module" src="index.js"></script>
+<script type="module" src="index.js"></script>
 </body>
 </html>
