--- a/index.html
+++ b/index.html
@@ -3,17 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <title>Sistema Oasis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- ESTILO -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark center">
 
-<div class="card">
-  <h2>🎫 Sistema de Tickets</h2>
-  <input id="nome" placeholder="Nome na cidade">
-  <input id="cid" placeholder="ID">
-  <button id="btnVerificar">Verificar</button>
-</div>
+  <div class="card">
+    <h2>🎫 Sistema de Tickets</h2>
 
-<script type="module" src="index.js"></script>
+    <input 
+      type="text" 
+      id="nome" 
+      placeholder="Nome na cidade"
+      autocomplete="off"
+    >
+
+    <input 
+      type="text" 
+      id="cid" 
+      placeholder="ID"
+      autocomplete="off"
+    >
+
+    <button id="btnVerificar">Verificar</button>
+  </div>
+
+  <!-- SCRIPT ÚNICO -->
+  <script type="module" src="index.js"></script>
+
 </body>
 </html>
