--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
     <button id="btnVerificar">Verificar</button>
 
-    <p id="status" style="margin-top:15px;color:#7dd3fc;"></p>
+    <p id="status"></p>
   </div>
 
+  <!-- ATENÇÃO: SOMENTE ESTE SCRIPT -->
   <script type="module" src="./index.js"></script>
 </body>
 </html>
