--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Sistema Oasis</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Central de Atendimento</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
-<body class="dark center">
-
-  <div class="card">
-    <h2>🎫 Sistema de Tickets</h2>
-
-    <input id="nome" placeholder="Nome na cidade">
-    <input id="cid" placeholder="ID">
-
-    <button id="btnVerificar">Verificar</button>
-
-    <p id="status"></p>
-  </div>
-
-  <!-- ATENÇÃO: SOMENTE ESTE SCRIPT -->
-  <script type="module" src="./index.js"></script>
+<body>
+    <div class="login-container">
+        <h1>Central de Atendimento</h1>
+        <a class="btn-login" href="https://discord.com/api/oauth2/authorize?client_id=1450905109083979785&redirect_uri=https%3A%2F%2Fhinarahelo.github.io%2Fsistema-oasis%2Fcallback.html&response_type=code&scope=identify">
+            Login com Discord
+        </a>
+    </div>
 </body>
 </html>
