--- a/callback.html
+++ b/callback.html
@@ -7,13 +7,12 @@
 <body>
     <h1>Processando login...</h1>
     <script>
-        // Pega o "code" da URL
         const urlParams = new URLSearchParams(window.location.search);
         const code = urlParams.get('code');
 
         if (code) {
-            // Redireciona para seu backend para trocar o code por token
-            window.location.href = `https://SEU_BACKEND/callback?code=${code}`;
+            // Redireciona para o backend que troca code por token
+            window.location.href = `https://oasis-backend.hinarahelo.repl.co/callback?code=${code}`;
         } else {
             alert("Nenhum código encontrado!");
         }
