--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="login-container">
         <h1>Central de Atendimento</h1>
-        <a class="btn-login" href="https://discord.com/api/oauth2/authorize?client_id=1450905109083979785&redirect_uri=https%3A%2F%2Fhinarahelo.github.io%2Fsistema-oasis%2Fcallback.html&response_type=code&scope=identify">
+        <a class="btn-login" href="https://discord.com/api/oauth2/authorize?client_id=1450905109083979785&redirect_uri=https%3A%2F%2Foasis-backend.hinarahelo.repl.co%2Fcallback&response_type=code&scope=identify">
             Login com Discord
         </a>
     </div>
